--- a/css/main.css
+++ b/css/main.css
@@ -618,7 +618,7 @@ img {
   font-size: 15px;
 }
 
-#content-slider-1 {
+.slider-1-content {
   display: inline-block;
   width: 50%;
   padding-right: 15px;
@@ -635,19 +635,11 @@ img {
   font-size: 15px;
 }
 
-#content-slider-2 {
+.slider-2-content {
   display: inline-block;
   width: 50%;
   padding-right: 15px;
   text-align: right;
-  font-size: 15px;
-}
-
-.content {
-  display: inline-block;
-  width: 82.0513%;
-  vertical-align: top;
-  padding-left: 5.812%;
   font-size: 15px;
 }
 
@@ -665,6 +657,53 @@ img {
 .limit-2 {
   text-align: right;
   padding-right: 15px;
+}
+
+.checkbox-cnt {
+  margin: 30px 0;
+}
+
+.checkbox {
+  display: none;
+}
+
+.checkbox-decor {
+  position: relative;
+  width: 15px;
+  height: 15px;
+  box-shadow: 0 -1px 5px 0 #777777;
+  border-radius: 3px;
+}
+
+.checkbox-decor,
+.label {
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 15px;
+}
+
+.label {
+  padding-left: 5px;
+}
+
+.checkbox:checked + .checkbox-decor::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 2px;
+  right: 2px;
+  bottom: 2px;
+  left: 2px;
+  background: url(../img/checked.png) center center no-repeat;
+  background-size: contain;
+}
+
+.content {
+  display: inline-block;
+  width: 82.0513%;
+  vertical-align: top;
+  padding-left: 5.812%;
+  font-size: 15px;
 }
 
 /*   header/nav   */
